--- a/opening.html
+++ b/opening.html
@@ -80,7 +80,9 @@
 
             <div class="contents">
                 <p>
-                    Our lab's research interests include computer vision, machine learning, and multi-modal learning.
+                    My research interests include deep learning, computer vision, multi-modal understanding and analysis. 
+                    Specifically, my group currently focuses on open-environment visual understanding, multi-modal LLM reasoning, multi-modal generation, etc. 
+                    In the long term, we aim to build AI systems that are highly transferable (able to generalize across various scenarios), highly autonomous (able to evolve in dynamic environments), and scalable (able to easily extend to new tasks without forgetting).
                 </p>
             </div>
 
@@ -91,17 +93,17 @@
                     Thanks for your interest in joining my group! We always have openings for outstanding students. 
                     Interested candidates for Master/PhD opportunities are strongly encouraged to contact me by 
                     <a href="mailto:guoliang_kang@buaa.edu.cn">email</a>. Please attach your CV, and clearly discuss your research interests, 
-                    coding skills and English ability. Besides, we are alway open to working with outstanding <b>BUAA undergraduates</b>  
-                    for some research projects, and you are welcome to my office to have a discussion. We provide extraordinarily strong 
-                    support to students for internship, visiting, collaboration, and networking opportunities. We encourage you to talk with current 
-                   members in our group for more details. 
+                    coding skills and English ability. We provide extraordinarily strong support to students for internship, visiting, collaboration, and networking opportunities.
+                    Besides, we are alway open to working with outstanding <b>BUAA undergraduates</b>  
+                    on some research projects. If you are interested, please contact me.
                 </p>
             </div>
            
             <h4 class="title">About Me</h4>
             <div class="contents">
                 <p>
-                    About guoliang kang.
+                    I am currently a Professor working in Beihang University. Before joining Beihang, I had been working in Carnegie Mellon Unversity (CMU) and University of Texas Austin (UTA) as a postdoc researcher. 
+                    I obtained my Ph.D. degree, Master degree, Bachelor degree from University of Technology Sydney (UTS), Beihang Unviersity and Chongqing University respectively. 
                 </p>
         </div>
     </div>
