--- a/seminar.html
+++ b/seminar.html
@@ -80,7 +80,8 @@
                         
             <div class="contents">
                 <p>
-                    Introduction of seminars.
+                    Seminars are held each week expect for special circumstances. 
+                    The aim of this seminar is to track interesting works, sharing ideas, and improve the students’ paper-reading and presentation skills. 
                     <br>
                 </p>
             </div>
