--- a/publication.html
+++ b/publication.html
@@ -98,6 +98,8 @@
                 <strong>PLGS: Robust Panoptic Lifting with 3D Gaussian Splatting</strong> <br>
                 Y. Wang, X. Wei, M. Lu, <strong>G. Kang</strong><br>
                 IEEE Transactions on Image Processing (<strong>IEEE TIP</strong>), 2024
+                <a href="https://arxiv.org/pdf/2410.17505">[PDF]</a>
+               
             </li>
             <li>
                 <strong>ReCLIP++: Learn to Rectify the Bias of CLIP for Unsupervised Semantic Segmentation</strong> <br>
@@ -334,6 +336,7 @@
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
+
 
 
 
