--- a/people.html
+++ b/people.html
@@ -129,7 +129,7 @@
     <h4 class="title">Alumni</h4>
     <ul class="alumni">
         <li>
-            <p><span style="color: black;">Xiaoyue Duan.</span> M.S. 2021-2023. Tensent.</p>
+            <p><span style="color: black;">Xiaoyue Duan.</span> M.S. 2021-2023. Tencent.</p>
         </li>
     </ul>
     <h4 class="title"></h4>
@@ -179,5 +179,6 @@
 </body>
 
 </html>
+
 
 
