--- a/index.html
+++ b/index.html
@@ -152,10 +152,15 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">Two papers are accepted to ACMMM 2025, congrats to Huijie, Nanxing, and Shai.
+                        <div class="item-detail">Three papers are accepted to ACMMM 2025, congrats to Huijie, Nanxing, and Shai.
                         </div>
                     </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
 
+                        <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail">One paper has been accepted by IJCV 2025, congrats to Jinjyun.
+                        </div>
+                    </li>
                     <!-- <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[SERVICE]</div>
@@ -171,12 +176,12 @@
                         </div>
                     </li> -->
 
-                    <li class="tl-item" ng-repeat="item in retailer_history">
+<!--                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ TEAM ]</div>
                         <div class="item-detail"> I joined Beihang University as a full professor on Aug 2022!
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
 
             </div>
@@ -248,6 +253,7 @@
 </div>
 </body>
 </html>
+
 
 
 
