--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="center-row" style="font-size: 16px;">
 
                 <p>
-                    My research interests include deep learning, and its applications in various computer vision tasks, e.g. ... etc.
+                    My research interests include deep learning, computer vision, multi-modal understanding and analysis. Specifically, my group currently focuses on open-environment visual understanding, multi-modal LLM reasoning, multi-modal generation, etc.
                 </p>
                 <p>
                     More details can be found <a href="opening.html">here</a>. 
@@ -253,6 +253,7 @@
 </div>
 </body>
 </html>
+
 
 
 
