--- a/index.html
+++ b/index.html
@@ -191,15 +191,16 @@
         
         <div class="container">
             <h3 class="title">Selected Honors & Awards</h3>
-
+            
             <div class="center-row" style="font-size: 16px;">
-
                 <ul id="interests">
-                    <li>
-                        to be updated...
-                    </li>
+                    <li>National Young Talent, China</li>
+                    <li>AMiner 2023-2025 AI 2000 Most Influential International Scholar Honorable Mention</li>
+                    <li>CVPR ActivityNet 2020, ActEV SDL task, 2(nd) place</li>
+                    <li>TRECVID ActEV (Activities in Extended Videos) challenge 2019, 1(st) place</li>
                 </ul>
             </div>
+
         </div>
     </div>
 </div>
@@ -253,6 +254,7 @@
 </div>
 </body>
 </html>
+
 
 
 
