--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         class="fa fa-globe"></i> 
                         <img src="./images/google_scholar.png" alt="" height="20px">
                     </a>
-                    <a href="https://github.com/kgl-prml">
+                    <a href="https://github.com/CLEAR-BUAA">
                         <img src="./images/github.png" alt="" height="20px">
                     </a>
                     </a>
@@ -252,6 +252,7 @@
 </div>
 </body>
 </html>
+
 
 
 
