--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     <p> 
                     <!-- Professor<br/> -->
                     Professor, <a href="http://shi.buaa.edu.cn/kangguoliang/zh_CN/index.htm">School of Automation Science and Electrical Engineering | Beihang University</a> <br>
-                    <strong>Office:</strong> New Main Building E2829, Beihang University, Beijing 100191<br/>
-                    <strong>Email</strong>: guoliang_kang@buaa.edu.cn<br/>
+                    <strong>Office:</strong> New Main Building E829, Beihang University, Beijing 100191<br/>
+                    <strong>Email</strong>: guoliang_kang(at)buaa(dot)edu(dot)cn<br/>
                     <strong>Prospective Students</strong> : <a href="opening.html">Contact me</a>. <br>
                     
                     <a href="https://scholar.google.com/citations?user=P24HCsgAAAAJ&hl=en" target="_blank"><i
@@ -252,6 +252,7 @@
 </div>
 </body>
 </html>
+
 
 
 
