--- a/publication.html
+++ b/publication.html
@@ -85,14 +85,14 @@
             <li>
                 <strong>PLGS: Robust Panoptic Lifting with 3D Gaussian Splatting</strong> <br>
                 Y. Wang, X. Wei, M. Lu, <strong>G. Kang</strong><br>
-                IEEE Transactions on Image Processing (<strong>IEEE TIP</strong>), 2025
+                IEEE Transactions on Image Processing (<strong>TIP</strong>), 2025
                 <a href="https://arxiv.org/pdf/2410.17505">[PDF]</a>
         
             </li>
             <li>
                 <strong>DADN: A Dynamic Anomaly Detection Network for Multivariate Time Series Data of the Industrial Internet of Things</strong> <br>
                 Y. Kong, J. Guo, L. Ren, <strong>G. Kang</strong>, Y. Wang, J. Li<br>
-                IEEE Transactions on Industrial Informatics (<strong>IEEE TII</strong>), 2025
+                IEEE Transactions on Industrial Informatics (<strong>TII</strong>), 2025
             </li>
         </ol>
         
@@ -101,7 +101,7 @@
             <li>
                 <strong>Normalizing Batch Normalization for Long-Tailed Recognition</strong> <br>
                 Y. Bao, <strong>G. Kang</strong>, L. Yang, X. Duan, B. Zhao, B. Zhang<br>
-                IEEE Transactions on Image Processing (<strong>IEEE TIP</strong>), 2024
+                IEEE Transactions on Image Processing (<strong>TIP</strong>), 2024
             </li>
             <li>
                 <strong>Ov-vis: Open-vocabulary video instance segmentation</strong> <br>
@@ -115,12 +115,12 @@
             <li>
                 <strong>Taking a closer look at factor disentanglement: Dual-path variational autoencoder learning for domain generalization</strong> <br>
                 Y. Luo, <strong>G. Kang</strong>, K. Liu, F. Zhuang, J. Li<br>
-                IEEE Transactions on Multimedia (<strong>IEEE TMM</strong>), 2023
+                IEEE Transactions on Multimedia (<strong>TMM</strong>), 2023
             </li>
             <li>
                 <strong>DropQueries: A Simple Way to Discover Comprehensive Segment Representations</strong> <br>
                 H. Ding, B. Wang, <strong>G. Kang</strong>, W. Li, C. He, Y. Zhao, Y. Wei<br>
-                IEEE Transactions on Multimedia (<strong>IEEE TMM</strong>), 2023
+                IEEE Transactions on Multimedia (<strong>TMM</strong>), 2023
             </li>
         </ol>
         <h3 class="title subtitle">2022 and Before</h3>
@@ -128,14 +128,14 @@
             <li>
                 <strong>Contrastive adaptation network for single-and multi-source domain adaptation</strong> <br>
                 <strong>G. Kang</strong>, L. Jiang, Y. Wei, Y. Yang, A. Hauptmann<br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>IEEE TPAMI</strong>), 2020
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2020
             </li>
         </ol>
         <ol>
             <li>
                 <strong>Shakeout: A new approach to regularized deep neural network training</strong> <br>
                 <strong>G. Kang</strong>, J. Li, D. Tao<br>
-                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>IEEE TPAMI</strong>), 2017
+                IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2017
             </li>
         </ol>
 
@@ -220,7 +220,7 @@
         <ol>
             <li>
                 <strong>Content-consistent matching for domain adaptive semantic segmentation</strong> <br>
-                <strong>G. Li*</strong>, <strong>G. Kang*</strong>, W. Liu, Y. Wei, Y. Yang<br>
+                G. Li*, <strong>G. Kang*</strong>, W. Liu, Y. Wei, Y. Yang<br>
                 European Conference on Computer Vision (<strong>ECCV</strong>), 2020
             </li>
             <li>
@@ -325,6 +325,7 @@
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
+
 
 
 
