--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
                         <div class="item-detail">One paper has been accepted by IJCV 2025, congrats to Jinjyun.
                         </div>
                     </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
+
+                        <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail">One paper has been accepted by TIP 2025, congrats to Yu.
+                        </div>
+                    </li>
                     <!-- <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[SERVICE]</div>
@@ -252,6 +258,7 @@
 </div>
 </body>
 </html>
+
 
 
 
