--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">Three papers are accepted to ACMMM 2025, congrats to Huijie, Nanxing, and Shai.
+                        <div class="item-detail">Three papers are accepted to ACMMM 2025, congrats to Huijie, Nanxing, and Shuai.
                         </div>
                     </li>
                     <li class="tl-item" ng-repeat="item in retailer_history">
@@ -258,6 +258,7 @@
 </div>
 </body>
 </html>
+
 
 
 
