--- a/people.html
+++ b/people.html
@@ -82,16 +82,39 @@
             </div>
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/nanxinghu.jpg" alt="">
-                    <h4>Nanxing Hu</h4>
-                    <p>(2024)</p>
+                    <img class="student-img" src="images/people/shuaima.JPG" alt="">
+                    <h4>Shuai Ma</h4>
+                    <p>(2025)</p>
                 </div>
             </div>    
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/nanxinghu.jpg" alt="">
-                    <h4>Nanxing Hu</h4>
-                    <p>(2024)</p>
+                    <img class="student-img" src="images/people/yuwang.jpg" alt="">
+                    <h4>Wang Yu</h4>
+                    <p>(2022)</p>
+                </div>
+            </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/jingyunwang.jpg" alt="">
+                    <h4>Jingyun Wang</h4>
+                    <p>(2023)</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/mingxiaoma.jpg" alt="">
+                    <h4>Mingxiao Ma</h4>
+                    <p>(2023)</p>
+                </div>
+            </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/huayangzhuge.png" alt="">
+                    <h4>Huayang Zhuge</h4>
+                    <p>(2023)</p>
                 </div>
             </div>
         </div>
@@ -103,25 +126,32 @@
         <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/nanxinghu.jpg" alt="">
-                    <h4>Nanxing Hu</h4>
-                    <p>(2024)</p>
+                    <img class="student-img" src="images/people/huijieliu.jpg" alt="">
+                    <h4>Huijie Liu</h4>
+                    <p>(2023)</p>
                 </div>
             </div>
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/nanxinghu.jpg" alt="">
-                    <h4>Nanxing Hu</h4>
+                    <img class="student-img" src="images/people/leitian.jpg" alt="">
+                    <h4>Lei Tian</h4>
                     <p>(2024)</p>
                 </div>
             </div>    
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/nanxinghu.jpg" alt="">
-                    <h4>Nanxing Hu</h4>
+                    <img class="student-img" src="images/people/shunyaozhu.JPG" alt="">
+                    <h4>Shunyao Zhu</h4>
                     <p>(2024)</p>
                 </div>
             </div>
+            <div class="col-md-3 team-grids">
+                <div class="team-img">
+                    <img class="student-img" src="images/people/yuxiangzhang.jpg" alt="">
+                    <h4>Yuxiang Zhang</h4>
+                    <p>(2025)</p>
+                </div>
+            </div> 
         </div>
         <div class="clearfix"></div>
     </div>
@@ -129,7 +159,16 @@
     <h4 class="title">Alumni</h4>
     <ul class="alumni">
         <li>
-            <p><span style="color: black;">Xiaoyue Duan.</span> M.S. 2021-2023. Tencent.</p>
+            <p><span style="color: black;">Xiaoyue Duan(co-supervised).</span> M.S. 2021-2023. Tencent.</p>
+        </li>
+        <li>
+            <p><span style="color: black;">Yuxiang Bao(co-supervised).</span> M.S. 2021-2023. Alibaba.</p>
+        </li>
+        <li>
+            <p><span style="color: black;">Cilin Yan(co-supervised).</span> M.S. 2023-2025. RedNote.</p>
+        </li>
+        <li>
+            <p><span style="color: black;">Yingfan Wang.</span> M.S. 2023-2025. PhD Stu @ Beihang University.</p>
         </li>
     </ul>
     <h4 class="title"></h4>
@@ -179,6 +218,7 @@
 </body>
 
 </html>
+
 
 
 
