--- a/people.html
+++ b/people.html
@@ -75,28 +75,28 @@
         <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/nanxinghu.jpg" alt="">
+                    <img class="student-img" src="images/people/nanxinghu.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Nanxing Hu</h4>
                     <p>(2024)</p>
                 </div>
             </div>
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/shuaima.JPG" alt="">
+                    <img class="student-img" src="images/people/shuaima.JPG" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Shuai Ma</h4>
                     <p>(2025)</p>
                 </div>
             </div>    
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/yuwang.jpg" alt="">
+                    <img class="student-img" src="images/people/yuwang.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Wang Yu</h4>
                     <p>(2022)</p>
                 </div>
             </div>
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/jingyunwang.jpg" alt="">
+                    <img class="student-img" src="images/people/jingyunwang.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Jingyun Wang</h4>
                     <p>(2023)</p>
                 </div>
@@ -112,7 +112,7 @@
             </div>
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/huayangzhuge.png" alt="" style="width:200px; height:250px; object-fit:cover;">>
+                    <img class="student-img" src="images/people/huayangzhuge.png" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Huayang Zhuge</h4>
                     <p>(2023)</p>
                 </div>
@@ -126,28 +126,28 @@
         <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/huijieliu.jpg" alt="">
+                    <img class="student-img" src="images/people/huijieliu.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Huijie Liu</h4>
                     <p>(2023)</p>
                 </div>
             </div>
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/leitian.jpg" alt="">
+                    <img class="student-img" src="images/people/leitian.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Lei Tian</h4>
                     <p>(2024)</p>
                 </div>
             </div>    
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/shunyaozhu.JPG" alt="">
+                    <img class="student-img" src="images/people/shunyaozhu.JPG" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Shunyao Zhu</h4>
                     <p>(2024)</p>
                 </div>
             </div>
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/yuxiangzhang.jpg" alt="">
+                    <img class="student-img" src="images/people/yuxiangzhang.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Yuxiang Zhang</h4>
                     <p>(2025)</p>
                 </div>
@@ -218,6 +218,7 @@
 </body>
 
 </html>
+
 
 
 
