--- a/seminar.html
+++ b/seminar.html
@@ -106,7 +106,7 @@
                             <td>
                                 How to make a website?
                                 [<a href="./seminar/vanillanet_jialong_6_25.pdf">pdf</a>] <br>
-                                FHow to make a website2?
+                                How to make a website2?
                                 [<a href="./seminar/Fast SAM_seminar.pdf">pdf</a>]
                             </td>
                         </tr>
@@ -132,7 +132,7 @@
 <div class="footer">
     <div class="container">
         <div class="col-md-5 col-md-offset-2">
-            <p>Copyright &copy; 2021.Company name All rights reserved. </p>
+            <p>Copyright &copy; 2025.Company name All rights reserved. </p>
         </div>
         <div class="col-md-3">
             <script type="text/javascript"
