--- a/people.html
+++ b/people.html
@@ -105,7 +105,7 @@
         <div class="row">
             <div class="col-md-3 team-grids">
                 <div class="team-img">
-                    <img class="student-img" src="images/people/mingxiaoma.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">>
+                    <img class="student-img" src="images/people/mingxiaoma.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">
                     <h4>Mingxiao Ma</h4>
                     <p>(2023)</p>
                 </div>
@@ -218,6 +218,7 @@
 </body>
 
 </html>
+
 
 
 
