--- a/people.html
+++ b/people.html
@@ -90,7 +90,7 @@
             <div class="col-md-3 team-grids">
                 <div class="team-img">
                     <img class="student-img" src="images/people/yuwang.jpg" alt="" style="width:200px; height:250px; object-fit:cover;">
-                    <h4>Wang Yu</h4>
+                    <h4>Yu Wang</h4>
                     <p>(2022)</p>
                 </div>
             </div>
@@ -218,6 +218,7 @@
 </body>
 
 </html>
+
 
 
 
