--- a/publication.html
+++ b/publication.html
@@ -262,15 +262,16 @@
                 <strong>Contrastive adaptation network for unsupervised domain adaptation</strong> <br>
                 <strong>G. Kang</strong>, L. Jiang, Y. Yang, A. Hauptmann<br>
                 Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019
-                <a href="">[PDF]</a>
-                <a href="">[Code]</a>
+                <a href="https://arxiv.org/abs/1901.00976">[PDF]</a>
+                <a href="https://github.com/kgl-prml/Contrastive-Adaptation-Network-for-Unsupervised-Domain-Adaptation">[Code]</a>
             </li>
             <li>
                 <strong>Annotation efficient cross-modal retrieval with adversarial attentive alignment</strong> <br>
                 P.-Y. Huang, <strong>G. Kang</strong>, W. Liu, X. Chang, A. Hauptmann<br>
                 ACM International Conference on Multimedia (<strong>ACMMM</strong>), 2019
-                <a href="https://arxiv.org/abs/1901.00976">[PDF]</a>
-                <a href="https://github.com/kgl-prml/Contrastive-Adaptation-Network-for-Unsupervised-Domain-Adaptation">[Code]</a>
+                <a href="https://dl.acm.org/doi/10.1145/3343031.3350894">[PDF]</a>
+<!--                 <a href="">[Code]</a> -->
+
             </li>
             <li>
                 <strong>Attract or distract: Exploit the margin of open set</strong> <br>
@@ -356,6 +357,7 @@
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
+
 
 
 
