--- a/seminar.html
+++ b/seminar.html
@@ -100,25 +100,156 @@
                     </thead>
                     <tbody> 
                         <tr>
-                            <td>Aug. 31</td>
-                            <td>Shuai Ma <br> Nanxing Hu </td>
+                            <td>Sep. 05</td>
+                            <td>Yu Wang</td>
                             <td>BUAA</td>
                             <td>
-                                How to make a website?
-                                [<a href="./seminar/vanillanet_jialong_6_25.pdf">pdf</a>] <br>
-                                How to make a website2?
-                                [<a href="./seminar/Fast SAM_seminar.pdf">pdf</a>]
+                                OpenVLA&UniVLA
+                                [<a href="./seminar/9.7 OpenVLA UniVLA_yuwang.pptx">pdf</a>] <br>
                             </td>
                         </tr>
                         <tr>
-                            <td>Jun. 18</td>
-                            <td>Shuai Ma <br> Nanxing Hu </td>
+                            <td>Aug. 29</td>
+                            <td>Jingyun Wang </td>
                             <td>BUAA</td>
                             <td>
-                                How to make a website?
-                                [<a href="./seminar/vanillanet_jialong_6_25.pdf">pdf</a>] <br>
-                                How to make a website2?
-                                [<a href="./seminar/SOOD_wenxin_6_18.pdf">pdf</a>]
+                                Visual Sketchpad&Uni-CoT
+                                [<a href="./seminar/Visual Sketchpad&Uni-CoT-jingyun-2025.08.29.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Aug. 15</td>
+                            <td>Shuai Ma </td>
+                            <td>BUAA</td>
+                            <td>
+                                Initial noise in generation
+                                [<a href="./seminar/initial noise in generation-shuaima-8.15.pdf">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Aug. 08</td>
+                            <td>Shuanyao Zhu </td>
+                            <td>BUAA</td>
+                            <td>
+                                Domain Adaption papers
+                                [<a href="./seminar/domain adaption-shunyao-2025.08.08.pdf">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jun. 28</td>
+                            <td>Lei Tian </td>
+                            <td>BUAA</td>
+                            <td>
+                                KANPDE&DiffusionPDE
+                                [<a href="./seminar/KANPDE&DiffusionPDE-leitian-2024.6.28ppt.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jun. 13</td>
+                            <td>Huayang Zhuge </td>
+                            <td>BUAA</td>
+                            <td>
+                                D-FINE&mmcv
+                                [<a href="./seminar/D-FINE&mmcv-zhuge-2025.6.13.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>May. 30</td>
+                            <td>Mingxiao Ma </td>
+                            <td>BUAA</td>
+                            <td>
+                                Continual-learning papers
+                                [<a href="./seminar/Continual-learning-mingxiao-2025.05.30.pdf">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>May. 23</td>
+                            <td>Yu Wang </td>
+                            <td>BUAA</td>
+                            <td>
+                                TRELLIS&MVAdapter
+                                [<a href="./seminar/TRELLIS MVAdapter-yuwang-2025.05.23.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>May. 16</td>
+                            <td>Nanxing Hu </td>
+                            <td>BUAA</td>
+                            <td>
+                                RL in LLMs
+                                [<a href="./seminar/RL_LLM-nanxing-2025-5.16.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>May. 09</td>
+                            <td>Jingyun Wang </td>
+                            <td>BUAA</td>
+                            <td>
+                                DeepSeek-R1
+                                [<a href="./seminar/DeepSeek-R1-jingyun-2025.05.09.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Apr. 18</td>
+                            <td>Nanxing Hu </td>
+                            <td>BUAA</td>
+                            <td>
+                                LLM basic
+                                [<a href="./seminar/LLM basic-nanxing-2025-4.18.pdf">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Apr. 16</td>
+                            <td>Lei Tian </td>
+                            <td>BUAA</td>
+                            <td>
+                                Dynamic&Deformable Gaussians
+                                [<a href="./seminar/dynamic.&deformable+leitian+20254.16pptx.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Mar. 14</td>
+                            <td>Shunyao Zhu </td>
+                            <td>BUAA</td>
+                            <td>
+                                lightweightDETR
+                                [<a href="./seminar/lightweightDETR-shunyao-2025.03.14.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Feb. 21</td>
+                            <td>Shuai Ma </td>
+                            <td>BUAA</td>
+                            <td>
+                                Teacache&ToCa
+                                [<a href="./seminar/Teacache&ToCa-shuai-2025.02.21.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jan.17</td>
+                            <td>Huijie Liu </td>
+                            <td>BUAA</td>
+                            <td>
+                                P2P&InstructPix2Pix
+                                [<a href="./seminar/P2P&InstructPix2Pix-huijie-2025.01.17.pdf">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jan. 10</td>
+                            <td>Huayang Zhuge </td>
+                            <td>BUAA</td>
+                            <td>
+                                Interpreting Object-level Fundation Model
+                                [<a href="./seminar/Interpreting Object-level Fundation Model-zhuge-2025.01.10.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Jan. 03</td>
+                            <td>Mingxiao Ma </td>
+                            <td>BUAA</td>
+                            <td>
+                                DETR
+                                [<a href="./seminar/DETR-mingxiao-2025.01.03.pptx">pdf</a>] <br>
                             </td>
                         </tr>
                     </tbody>
