--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
                         <div class="item-title">[ PAPER ]</div>
-                        <div class="item-detail">One paper has been accepted by IJCV 2025, congrats to Jinjyun.
+                        <div class="item-detail">One paper has been accepted by IJCV 2025, congrats to Jingyun.
                         </div>
                     </li>
                     <li class="tl-item" ng-repeat="item in retailer_history">
