--- a/seminar.html
+++ b/seminar.html
@@ -110,11 +110,20 @@
                         </tr>
                         <tr>
                             <td>Aug. 29</td>
-                            <td>Jingyun Wang </td>
+                            <td>Jingyun Wang </td>   
                             <td>BUAA</td>
                             <td>
                                 Visual Sketchpad&Uni-CoT
                                 [<a href="./seminar/Visual Sketchpad&Uni-CoT-jingyun-2025.08.29.pptx">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Aug. 22</td>
+                            <td>Nanxing Hu </td>
+                            <td>BUAA</td>
+                            <td>
+                                deepeyes&temporal-r1
+                                [<a href="./seminar/deepeyes&temporal-r1_NanxingHu_2025.8.22.pdf">pdf</a>] <br>
                             </td>
                         </tr>
                         <tr>
