--- a/seminar.html
+++ b/seminar.html
@@ -100,6 +100,15 @@
                     </thead>
                     <tbody> 
                         <tr>
+                            <td>Sep. 12</td>
+                            <td>Mingxiao Ma</td>
+                            <td>BUAA</td>
+                            <td>
+                                Clip-CIL & PTM-CIL
+                                [<a href="./seminar/Clip-CIL & PTM-CIL-mingxiao-2025.09.12.pdf">pdf</a>] <br>
+                            </td>
+                        </tr>
+                        <tr>
                             <td>Sep. 05</td>
                             <td>Yu Wang</td>
                             <td>BUAA</td>
