--- a/index.html
+++ b/index.html
@@ -148,13 +148,16 @@
             <div class="history-tl-container">
                 <ul class="tl">
                     <li class="tl-item" ng-repeat="item in retailer_history">
-
+                        <div class="item-title">[ PAPER ]</div>
+                        <div class="item-detail">One paper is accepted to NeurIPS 2025, congrats to Yuxiang.
+                        </div>
+                    </li>
+                    <li class="tl-item" ng-repeat="item in retailer_history">
                         <div class="item-title">[ PAPER ]</div>
                         <div class="item-detail">Three papers are accepted to ACMMM 2025, congrats to Huijie, Nanxing, and Shuai.
                         </div>
                     </li>
                     <li class="tl-item" ng-repeat="item in retailer_history">
-
                         <div class="item-title">[ PAPER ]</div>
                         <div class="item-detail">One paper has been accepted by IJCV 2025, congrats to Jingyun.
                         </div>
@@ -258,6 +261,7 @@
 </div>
 </body>
 </html>
+
 
 
 
