--- a/publication.html
+++ b/publication.html
@@ -141,6 +141,13 @@
         <h3 class="title subtitle">2025</h3>
         <ol>
             <li>
+                <strong>FreeInv: Free Lunch for Improving DDIM Inversion</strong> <br>
+                Y Bao, H Liu, X Gao, H Fu, <strong>G. Kang</strong><br>
+                 Neural Information Processing Systems (<strong>NeurIPS</strong>), 2025
+                <a href="https://arxiv.org/pdf/2503.23035">[PDF]</a>
+<!--                 <a href="">[Code]</a> -->
+            </li>
+            <li>
                 <strong>Enhancing Visual Reliance in Text Generation: A Bayesian Perspective on Mitigating Hallucination in Large Vision-Language Models</strong> <br>
                 N. Hu, X. Duan, J. Zhang, <strong>G. Kang</strong><br>
                 ACM International Conference on Multimedia (<strong>ACMMM</strong>), 2025
@@ -356,6 +363,7 @@
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
+
 
 
 
